Made final tweaks to style, added form content to Contact page

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,6 +6,10 @@ body {
     background-image: url('../images/topography.png');
 }
 
+textarea.form-control {
+    height: 10rem;
+}
+
 .headerFont {
     font-family: 'Volkhov', serif;
     font-size: 26px;
